k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eso-shop
  labels:
    app: k8s-eso-shop
